Introduce dedicated ChangeLog fin man/ Update all .pot files

--- a/man/C/po/deb-control.5.pot
+++ b/man/C/po/deb-control.5.pot
@@ -6,41 +6,41 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
+# type: TH
 #.  Author: Raul Miller
 #.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-# type: TH
 #: deb-control.5:3
 #, no-wrap
 msgid "DEB-CONTROL"
 msgstr ""
 
+# type: TH
 #.  Author: Raul Miller
 #.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-# type: TH
 #: deb-control.5:3
 #, no-wrap
 msgid "January 2000"
 msgstr ""
 
+# type: TH
 #.  Author: Raul Miller
 #.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-# type: TH
 #: deb-control.5:3
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
 
+# type: TH
 #.  Author: Raul Miller
 #.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
-# type: TH
 #: deb-control.5:3
 #, no-wrap
 msgid "dpkg utilities"
@@ -364,11 +364,11 @@ msgid ""
 "This is a list of virtual packages that this one provides. Usually this is "
 "used in the case of several packages all providing the same service.  For "
 "example, sendmail and exim can serve as a mail server, so they provide a "
-"common package (`mail-transport-agent') on which other packages can "
-"depend. This will allow sendmail or exim to serve as a valid option to "
-"satisy the dependency. This prevents the packages that depend on a mail "
-"server from having to know the package names for all of them, and using `|' "
-"to separate the list."
+"common package (`mail-transport-agent') on which other packages can depend. "
+"This will allow sendmail or exim to serve as a valid option to satisy the "
+"dependency. This prevents the packages that depend on a mail server from "
+"having to know the package names for all of them, and using `|' to separate "
+"the list."
 msgstr ""
 
 # type: Plain text
@@ -412,8 +412,8 @@ msgid ""
 " will run more slowly, however.)\n"
 msgstr ""
 
-#.  .RE
 # type: SH
+#.  .RE
 #: deb-control.5:198
 #, no-wrap
 msgid "SEE ALSO"
@@ -421,5 +421,5 @@ msgstr ""
 
 # type: Plain text
 #: deb-control.5:201
-msgid "B<deb>(5), B<dpkg>(8), B<dpkg-deb>(1)."
+msgid "B<deb>(5), B<dpkg>(1), B<dpkg-deb>(1)."
 msgstr ""
