--- a/man/C/po/deb.5.pot
+++ b/man/C/po/deb.5.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: deb.5:1
@@ -135,9 +135,9 @@ msgid ""
 "These members must occur in this exact order.  Current implementations "
 "should ignore any additional members after B<data.tar.gz>.  Further members "
 "may be defined in the future, and (if possible) will be placed after these "
-"three. Any additional members that may need to be inserted before "
-"B<data.tar.gz> and which should be safely ignored by older programs, will "
-"have names starting with an underscore, `B<_>'."
+"three. Any additional members that may need to be inserted before B<data.tar."
+"gz> and which should be safely ignored by older programs, will have names "
+"starting with an underscore, `B<_>'."
 msgstr ""
 
 # type: Plain text
