--- a/man/C/po/install-info.8.pot
+++ b/man/C/po/install-info.8.pot
@@ -6,45 +6,45 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
+# type: TH
 #.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
 #.  This is free software; see the GNU General Public Licence version 2
 #.  or later for copying conditions.  There is NO warranty.
-# type: TH
 #: install-info.8:5
 #, no-wrap
 msgid "INSTALL-INFO"
 msgstr ""
 
+# type: TH
 #.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
 #.  This is free software; see the GNU General Public Licence version 2
 #.  or later for copying conditions.  There is NO warranty.
-# type: TH
 #: install-info.8:5
 #, no-wrap
 msgid "29th November 1995"
 msgstr ""
 
+# type: TH
 #.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
 #.  This is free software; see the GNU General Public Licence version 2
 #.  or later for copying conditions.  There is NO warranty.
-# type: TH
 #: install-info.8:5
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
 
+# type: TH
 #.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
 #.  This is free software; see the GNU General Public Licence version 2
 #.  or later for copying conditions.  There is NO warranty.
-# type: TH
 #: install-info.8:5
 #, no-wrap
 msgid "dpkg utilities"
@@ -71,8 +71,8 @@ msgstr ""
 #: install-info.8:15
 msgid ""
 "B<install-info> [--version] [--help] [--debug] [--maxwidth=nnn] [--section "
-"regexp title] [--infodir=xxx] [--align=nnn] [--quiet] [--menuentry=xxx] "
-"[--description=xxx] [--remove | --remove-exactly ] [--] filename"
+"regexp title] [--infodir=xxx] [--align=nnn] [--quiet] [--menuentry=xxx] [--"
+"description=xxx] [--remove | --remove-exactly ] [--] filename"
 msgstr ""
 
 # type: SH
@@ -194,10 +194,10 @@ msgid ""
 "This option is essentially the same as B<--remove> except that I<filename> "
 "is taken as the exact entry to be removed, rather than as the name of an "
 "existing file.  This can be important when trying to remove entries that "
-"refer to info files in subdirectories (i.e. \"emacs-20/emacs\") because "
-"B<--remove> will operate on the basename of the given I<filename> rather "
-"than the exact name given.  (i.e.  B<--remove> \"emacs-20/emacs\" would "
-"cause B<install-info> to look for \"emacs\", not \"emacs-20/emacs\")."
+"refer to info files in subdirectories (i.e. \"emacs-20/emacs\") because B<--"
+"remove> will operate on the basename of the given I<filename> rather than "
+"the exact name given.  (i.e.  B<--remove> \"emacs-20/emacs\" would cause "
+"B<install-info> to look for \"emacs\", not \"emacs-20/emacs\")."
 msgstr ""
 
 # type: TP
@@ -384,8 +384,8 @@ msgid ""
 "If the entry found in the Info file itself extends across several lines, "
 "each giving a menu entry, the text found in the file is used verbatim.  In "
 "this case the alphabetic ordering scheme is turned off, and the entries are "
-"inserted at the top of section in question.  In this case the "
-"B<--menuentry>, B<--maxwidth>, B<--align>, B<--calign> and B<--menuentry> "
+"inserted at the top of section in question.  In this case the B<--"
+"menuentry>, B<--maxwidth>, B<--align>, B<--calign> and B<--menuentry> "
 "options are ignored."
 msgstr ""
 
