--- a/man/C/po/start-stop-daemon.8.pot
+++ b/man/C/po/start-stop-daemon.8.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: start-stop-daemon.8:1
@@ -109,8 +109,8 @@ msgid ""
 "specified process.  If such a process exists, B<start-stop-daemon> sends it "
 "the signal specified by B<--signal>, and exits with error status 0.  If such "
 "a process does not exist, B<start-stop-daemon> exits with error status 1 (0 "
-"if B<--oknodo> is specified).  If B<--retry> is specified then "
-"B<start-stop-daemon> will check that the process(es) have terminated."
+"if B<--oknodo> is specified).  If B<--retry> is specified then B<start-stop-"
+"daemon> will check that the process(es) have terminated."
 msgstr ""
 
 # type: Plain text
@@ -140,8 +140,8 @@ msgstr ""
 # type: Plain text
 #: start-stop-daemon.8:93
 msgid ""
-"Check for processes that are instances of this executable (according to "
-"B</proc/>I<pid>B</exe> )."
+"Check for processes that are instances of this executable (according to B</"
+"proc/>I<pid>B</exe> )."
 msgstr ""
 
 # type: TP
@@ -163,7 +163,8 @@ msgstr ""
 
 # type: Plain text
 #: start-stop-daemon.8:103
-msgid "Check for processes owned by the user specified by I<username> or I<uid>."
+msgid ""
+"Check for processes owned by the user specified by I<username> or I<uid>."
 msgstr ""
 
 # type: TP
@@ -186,8 +187,8 @@ msgstr ""
 # type: Plain text
 #: start-stop-daemon.8:112
 msgid ""
-"Check for processes with the name I<process-name> (according to "
-"B</proc/>I<pid>B</stat>)."
+"Check for processes with the name I<process-name> (according to B</proc/"
+">I<pid>B</stat>)."
 msgstr ""
 
 # type: TP
@@ -306,8 +307,8 @@ msgid ""
 "as you would for the `chown' command (I<user>B<:>I<group>).  When using this "
 "option you must realize that the primary and supplemental groups are set as "
 "well, even if the B<--group> option is not specified.  The B<--group> option "
-"is only for groups that the user isn't normally a member of (like adding "
-"per/process group membership for generic users like B<nobody>)."
+"is only for groups that the user isn't normally a member of (like adding per/"
+"process group membership for generic users like B<nobody>)."
 msgstr ""
 
 # type: TP
@@ -333,9 +334,8 @@ msgstr ""
 #: start-stop-daemon.8:213
 msgid ""
 "Chdir to I<path> before starting the process. This is done after the chroot "
-"if the B<-r>|B<--chroot> option is set.  When not specified, "
-"start-stop-daemon will chdir to the root directory before starting the "
-"process."
+"if the B<-r>|B<--chroot> option is set.  When not specified, start-stop-"
+"daemon will chdir to the root directory before starting the process."
 msgstr ""
 
 # type: TP
@@ -359,7 +359,7 @@ msgstr ""
 # type: TP
 #: start-stop-daemon.8:225
 #, no-wrap
-msgid "B<-N>|B<--nicelevel> I<int> "
+msgid "B<-N>|B<--nicelevel> I<int>  "
 msgstr ""
 
 # type: Plain text
@@ -377,12 +377,12 @@ msgstr ""
 #: start-stop-daemon.8:243
 msgid ""
 "Used when starting a program that does not create its own pid file. This "
-"option will make B<start-stop-daemon> create the file referenced with "
-"B<--pidfile> and place the pid into it just before executing the "
-"process. Note, it will not be removed when stopping the program.  B<NOTE:> "
-"This feature may not work in all cases. Most notably when the program being "
-"executed forks from its main process. Because of this it is usually only "
-"useful when combined with the B<--background> option."
+"option will make B<start-stop-daemon> create the file referenced with B<--"
+"pidfile> and place the pid into it just before executing the process. Note, "
+"it will not be removed when stopping the program.  B<NOTE:> This feature may "
+"not work in all cases. Most notably when the program being executed forks "
+"from its main process. Because of this it is usually only useful when "
+"combined with the B<--background> option."
 msgstr ""
 
 # type: TP
