--- a/man/C/po/update-alternatives.8.pot
+++ b/man/C/po/update-alternatives.8.pot
@@ -6,14 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
+# type: TH
 #.  update\-alternatives.8
 #.  This man page is copyright 1997 Charles Briscoe-Smith
 #.  This is free documentation; you can redistribute it and/or modify
@@ -21,12 +22,12 @@ msgstr ""
 #.  by the Free Software Foundation; either version 2 of the License, or
 #.  (at your option) any later version.  There is NO WARRANTY.  You can
 #.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-# type: TH
 #: update-alternatives.8:8
 #, no-wrap
 msgid "UPDATE-ALTERNATIVES"
 msgstr ""
 
+# type: TH
 #.  update\-alternatives.8
 #.  This man page is copyright 1997 Charles Briscoe-Smith
 #.  This is free documentation; you can redistribute it and/or modify
@@ -34,12 +35,12 @@ msgstr ""
 #.  by the Free Software Foundation; either version 2 of the License, or
 #.  (at your option) any later version.  There is NO WARRANTY.  You can
 #.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-# type: TH
 #: update-alternatives.8:8
 #, no-wrap
 msgid "19 January 1998"
 msgstr ""
 
+# type: TH
 #.  update\-alternatives.8
 #.  This man page is copyright 1997 Charles Briscoe-Smith
 #.  This is free documentation; you can redistribute it and/or modify
@@ -47,12 +48,12 @@ msgstr ""
 #.  by the Free Software Foundation; either version 2 of the License, or
 #.  (at your option) any later version.  There is NO WARRANTY.  You can
 #.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-# type: TH
 #: update-alternatives.8:8
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
 
+# type: TH
 #.  update\-alternatives.8
 #.  This man page is copyright 1997 Charles Briscoe-Smith
 #.  This is free documentation; you can redistribute it and/or modify
@@ -60,7 +61,6 @@ msgstr ""
 #.  by the Free Software Foundation; either version 2 of the License, or
 #.  (at your option) any later version.  There is NO WARRANTY.  You can
 #.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-# type: TH
 #: update-alternatives.8:8
 #, no-wrap
 msgid "dpkg utilities"
@@ -74,7 +74,8 @@ msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:11
-msgid "update-alternatives - maintain symbolic links determining default commands"
+msgid ""
+"update-alternatives - maintain symbolic links determining default commands"
 msgstr ""
 
 # type: SH
@@ -162,8 +163,8 @@ msgid ""
 "functionality.  The alternatives system and the system administrator "
 "together determine which actual file is referenced by this generic name.  "
 "For example, if the text editors B<ed>(1)  and B<nvi>(1)  are both installed "
-"on the system, the alternatives system will cause the generic name "
-"I</usr/bin/editor> to refer to I</usr/bin/nvi> by default.  The system "
+"on the system, the alternatives system will cause the generic name I</usr/"
+"bin/editor> to refer to I</usr/bin/nvi> by default.  The system "
 "administrator can override this and cause it to refer to I</usr/bin/ed> "
 "instead, and the alternatives system will not alter this setting until "
 "explicitly requested to do so."
@@ -185,22 +186,21 @@ msgstr ""
 msgid ""
 "When each package providing a file with a particular functionality is "
 "installed, changed or removed, B<update-alternatives> is called to update "
-"information about that file in the alternatives system.  "
-"B<update-alternatives> is usually called from the B<postinst> or B<prerm> "
-"scripts in Debian packages."
+"information about that file in the alternatives system.  B<update-"
+"alternatives> is usually called from the B<postinst> or B<prerm> scripts in "
+"Debian packages."
 msgstr ""
 
 # type: Plain text
 #: update-alternatives.8:133
 msgid ""
 "It is often useful for a number of alternatives to be synchronised, so that "
-"they are changed as a group; for example, when several versions of the "
-"B<vi>(1)  editor are installed, the man page referenced by "
-"I</usr/share/man/man1/vi.1> should correspond to the executable referenced "
-"by I</usr/bin/vi>.  B<update-alternatives> handles this by means of "
-"I<master> and I<slave> links; when the master is changed, any associated "
-"slaves are changed too.  A master link and its associated slaves make up a "
-"I<link> I<group>."
+"they are changed as a group; for example, when several versions of the B<vi>"
+"(1)  editor are installed, the man page referenced by I</usr/share/man/man1/"
+"vi.1> should correspond to the executable referenced by I</usr/bin/vi>.  "
+"B<update-alternatives> handles this by means of I<master> and I<slave> "
+"links; when the master is changed, any associated slaves are changed too.  A "
+"master link and its associated slaves make up a I<link> I<group>."
 msgstr ""
 
 # type: Plain text
@@ -324,8 +324,8 @@ msgstr ""
 # type: Plain text
 #: update-alternatives.8:210
 msgid ""
-"A directory, by default I</var/lib/dpkg/alternatives>, containing "
-"B<update-alternatives>' state information."
+"A directory, by default I</var/lib/dpkg/alternatives>, containing B<update-"
+"alternatives>' state information."
 msgstr ""
 
 # type: TP
@@ -361,8 +361,7 @@ msgstr ""
 # type: Plain text
 #: update-alternatives.8:221
 msgid ""
-"A link in a link group which is controlled by the setting of the master "
-"link."
+"A link in a link group which is controlled by the setting of the master link."
 msgstr ""
 
 # type: TP
@@ -561,9 +560,7 @@ msgstr ""
 # type: TP
 #: update-alternatives.8:310
 #, no-wrap
-msgid ""
-"B<--install> I<genname symlink altern priority> [B<--slave> I<genname "
-"symlink altern>] ..."
+msgid "B<--install> I<genname symlink altern priority> [B<--slave> I<genname symlink altern>] ..."
 msgstr ""
 
 # type: Plain text
@@ -729,8 +726,8 @@ msgstr ""
 # type: Plain text
 #: update-alternatives.8:414
 msgid ""
-"The default administration directory.  Can be overridden by the "
-"B<--admindir> option."
+"The default administration directory.  Can be overridden by the B<--"
+"admindir> option."
 msgstr ""
 
 # type: SH
