--- a/man/C/po/822-date.1.pot
+++ b/man/C/po/822-date.1.pot
@@ -6,41 +6,41 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
+# type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
 #.  Authors: Ian Jackson
-# type: TH
 #: 822-date.1:3
 #, no-wrap
 msgid "822-DATE"
 msgstr ""
 
+# type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
 #.  Authors: Ian Jackson
-# type: TH
 #: 822-date.1:3
 #, no-wrap
 msgid "14th August 1996"
 msgstr ""
 
+# type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
 #.  Authors: Ian Jackson
-# type: TH
 #: 822-date.1:3
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
 
+# type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
 #.  Authors: Ian Jackson
-# type: TH
 #: 822-date.1:3
 #, no-wrap
 msgid "dpkg utilities"
