--- a/man/C/po/cleanup-info.8.pot
+++ b/man/C/po/cleanup-info.8.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: cleanup-info.8:1
@@ -57,7 +57,8 @@ msgstr ""
 
 # type: Plain text
 #: cleanup-info.8:7
-msgid "B<cleanup-info> [--help] [--unsafe] [--version] [--] [I<E<lt>dirnameE<gt>>]"
+msgid ""
+"B<cleanup-info> [--help] [--unsafe] [--version] [--] [I<E<lt>dirnameE<gt>>]"
 msgstr ""
 
 # type: SH
@@ -71,8 +72,8 @@ msgstr ""
 msgid ""
 "B<cleanup-info> is a Perl script that tries to clean up the mess that bogus "
 "install-info may have done. It gathers all sections with the same heading "
-"into a single one.  It tries to be smart about cases and trailing "
-"colon/spaces."
+"into a single one.  It tries to be smart about cases and trailing colon/"
+"spaces."
 msgstr ""
 
 # type: Plain text
