--- a/man/C/po/deb-old.5.pot
+++ b/man/C/po/deb-old.5.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: deb-old.5:1
@@ -70,8 +70,8 @@ msgstr ""
 #: deb-old.5:15
 msgid ""
 "The B<.deb> format is the Debian binary package file format.  This manual "
-"page describes the B<old> format, used before Debian 0.93.  Please see "
-"B<deb>(5)  for details of the new format."
+"page describes the B<old> format, used before Debian 0.93.  Please see B<deb>"
+"(5)  for details of the new format."
 msgstr ""
 
 # type: SH
