--- a/man/C/po/dpkg-divert.8.pot
+++ b/man/C/po/dpkg-divert.8.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: dpkg-divert.8:1
@@ -117,7 +117,8 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-divert.8:41
-msgid "Set the dpkg data directory to E<lt>directoryE<gt> (default: /var/lib/dpkg)."
+msgid ""
+"Set the dpkg data directory to E<lt>directoryE<gt> (default: /var/lib/dpkg)."
 msgstr ""
 
 # type: TP
@@ -139,7 +140,8 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-divert.8:47
-msgid "Output the version and the short usage instructions, and exit successfully."
+msgid ""
+"Output the version and the short usage instructions, and exit successfully."
 msgstr ""
 
 # type: TP
@@ -271,15 +273,15 @@ msgstr ""
 # type: Plain text
 #: dpkg-divert.8:90
 msgid ""
-"To divert any package trying to install I</usr/bin/example> to "
-"I</usr/bin/example.foo>, except your own I<wibble> package:"
+"To divert any package trying to install I</usr/bin/example> to I</usr/bin/"
+"example.foo>, except your own I<wibble> package:"
 msgstr ""
 
 # type: Plain text
 #: dpkg-divert.8:92
 msgid ""
-"dpkg-divert --package wibble --divert /usr/bin/example.foo --rename "
-"/usr/bin/example"
+"dpkg-divert --package wibble --divert /usr/bin/example.foo --rename /usr/bin/"
+"example"
 msgstr ""
 
 # type: Plain text
@@ -310,8 +312,8 @@ msgstr ""
 # type: Plain text
 #: dpkg-divert.8:105
 msgid ""
-"Note: dpkg-divert preserves the old copy of this file, with extension "
-"\"-old\", before replacing it with the new one."
+"Note: dpkg-divert preserves the old copy of this file, with extension \"-old"
+"\", before replacing it with the new one."
 msgstr ""
 
 # type: SH
@@ -322,7 +324,7 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-divert.8:107
-msgid "B<dpkg>(8)."
+msgid "B<dpkg>(1)."
 msgstr ""
 
 # type: SH
