--- a/man/C/po/dpkg-query.1.pot
+++ b/man/C/po/dpkg-query.1.pot
@@ -6,24 +6,24 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: dpkg-query.1:1
 #, no-wrap
-msgid "DPKG-QUERY"
+msgid "dpkg-query"
 msgstr ""
 
 # type: TH
 #: dpkg-query.1:1
 #, no-wrap
-msgid "August 2001"
+msgid "2006-02-11"
 msgstr ""
 
 # type: TH
@@ -56,100 +56,146 @@ msgid "SYNOPSIS"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:7
-msgid "B<dpkg-query>"
+#: dpkg-query.1:9
+msgid "B<dpkg-query> B<-l>|B<--list> I<package-name-pattern> ..."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:13
+msgid "B<dpkg-query> B<-W>|B<--show> I<package-name-pattern> ..."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:17
+msgid "B<dpkg-query> B<-s>|B<--status> I<package-name> ..."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:21
+msgid "B<dpkg-query> B<-L>|B<--listfiles> I<package-name> ..."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:25
+msgid "B<dpkg-query> B<-S>|B<--search> I<filename-search-pattern> ..."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:29
+msgid "B<dpkg-query> B<-p>|B<--print-avail> I<package-name> ..."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:32
+msgid "B<dpkg-query> B<--licence>|B<--license>"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:35
+msgid "B<dpkg-query> B<--version>"
 msgstr ""
 
 # type: SH
-#: dpkg-query.1:8
+#: dpkg-query.1:36
 #, no-wrap
 msgid "DESCRIPTION"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:11
+#: dpkg-query.1:39
 msgid ""
 "B<dpkg-query> is a tool to show information about packages listed in the "
 "B<dpkg> database."
 msgstr ""
 
 # type: SH
-#: dpkg-query.1:13
+#: dpkg-query.1:40
 #, no-wrap
 msgid "COMMANDS"
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:14
+#: dpkg-query.1:41
 #, no-wrap
 msgid "B<-l> | B<--list> I<package-name-pattern> ..."
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:22
+#: dpkg-query.1:49
 msgid ""
 "List packages matching given pattern. If no I<package-name-pattern> is "
 "given, list all packages in I</var/lib/dpkg/status>.  Normal shell wildchars "
 "are allowed in I<package-name-pattern>. Please note you will probably have "
 "to quote I<package-name-pattern> to prevent the shell from performing "
 "filename expansion. For example this will list all package names starting "
-"with ``libc5'':"
+"with ``libc6'':"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:26
+#: dpkg-query.1:53
 #, no-wrap
-msgid "  B<dpkg-query -l 'libc5*'>\n"
+msgid "  B<dpkg-query -l \\(aqlibc6*\\(aq>\n"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:59
+msgid ""
+"The output format of this option is not configurable, but varies "
+"automatically to fit the terminal width. It is intended for human readers, "
+"and is not easily machine-readable. See B<-W> (B<--show>)  and B<--"
+"showformat> for a way to configure the output format."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:27
+#: dpkg-query.1:59
 #, no-wrap
 msgid "B<-W> | B<--show> I<package-name-pattern> ..."
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:32
+#: dpkg-query.1:66
 msgid ""
 "Just like the B<--list> option this will list all packages matching the "
-"given pattern. However the output can be customized using the "
-"B<--showformat> option."
+"given pattern. However the output can be customized using the B<--"
+"showformat> option.  The default output format gives one line per matching "
+"package, each line having the name and installed version of the package, "
+"separated by a tab."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:32
+#: dpkg-query.1:66
 #, no-wrap
 msgid "B<-s> | B<--status> I<package-name> ..."
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:36
+#: dpkg-query.1:70
 msgid ""
 "Report status of specified package. This just displays the entry in the "
 "installed package status database."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:36
+#: dpkg-query.1:70
 #, no-wrap
-msgid "B<-L> | B<--listfiles> I<package> ..."
+msgid "B<-L> | B<--listfiles> I<package-name> ..."
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:41
+#: dpkg-query.1:75
 msgid ""
-"List files installed to your system from B<package>.  However, note that "
-"files created by package-specific installation-scripts are not listed."
+"List files installed to your system from B<package-name>.  However, note "
+"that files created by package-specific installation-scripts are not listed."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:41
+#: dpkg-query.1:75
 #, no-wrap
 msgid "B<-S> | B<--search> I<filename-search-pattern> ..."
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:47
+#: dpkg-query.1:81
 msgid ""
 "Search for a filename from installed packages. All standard shell wildchars "
 "can be used in the pattern.  This command will not list extra files created "
@@ -157,130 +203,205 @@ msgid ""
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:47
+#: dpkg-query.1:81
 #, no-wrap
-msgid "B<-p> |B<--print-avail> package"
+msgid "B<-p> |B<--print-avail> I<package-name>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:51
-msgid "Display details about I<package>, as found in I</var/lib/dpkg/available>."
+#: dpkg-query.1:85
+msgid ""
+"Display details about I<package-name>, as found in I</var/lib/dpkg/"
+"available>."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:51
+#: dpkg-query.1:85
 #, no-wrap
 msgid "B<--licence> | B<--license>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:54
+#: dpkg-query.1:88
 msgid "Display licence and copyright information."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:54
+#: dpkg-query.1:88
 #, no-wrap
 msgid "B<--version>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:57
+#: dpkg-query.1:91
 msgid "Display version information."
 msgstr ""
 
 # type: SH
-#: dpkg-query.1:58
+#: dpkg-query.1:92
 #, no-wrap
 msgid "OPTIONS"
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:59
+#: dpkg-query.1:93
 #, no-wrap
 msgid "B<--admindir=>I<dir>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:63
+#: dpkg-query.1:97
 msgid ""
-"Change the location of the B<dpkg> database. The default location is "
-"I</var/lib/dpkg>."
+"Change the location of the B<dpkg> database. The default location is I</var/"
+"lib/dpkg>."
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:63
+#: dpkg-query.1:97
 #, no-wrap
 msgid "B<-f> | B<--showformat=>I<format>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:72
+#: dpkg-query.1:102
 msgid ""
 "This option is used to specify the format of the output B<--show> will "
-"produce.  The format is a string that will be output for each package "
-"listed. It can include the standard escape sequences \\en (newline), \\er "
-"(carriage return) or \\e\\e (plain backslash). Package information can be "
-"included by inserting variable references to package fields using the "
-"${var[;width]} syntax. Fields are printed be right-aligned unless the width "
-"is negative in which case left alignment will be used."
+"produce.  The format is a string that will be output for each package listed."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:104
+msgid "In the format string, \\(lqB<\\e>\\(rq introduces escapes:"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:110
+#, no-wrap
+msgid ""
+"    B<\\en>  newline\n"
+"    B<\\er>  carriage return\n"
+"    B<\\et>  tab\n"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:115
+msgid ""
+"\\(lqB<\\e>\\(rq before any other character suppresses any special meaning "
+"of the following character, which is useful for \\(lqB<\\e>\\(rq and \\(lqB<"
+"$>\\(rq."
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:121
+msgid ""
+"Package information can be included by inserting variable references to "
+"package fields using the syntax \\(lqB<${>I<field>[B<;>I<width>]B<}>\\(rq. "
+"Fields are printed right-aligned unless the width is negative in which case "
+"left alignment will be used. The following I<field>s are recognised:"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:152
+#, no-wrap
+msgid ""
+"    B<Architecture>\n"
+"    B<Bugs>\n"
+"    B<Conffiles>\n"
+"    B<Config-Version>\n"
+"    B<Conflicts>\n"
+"    B<Depends>\n"
+"    B<Description>\n"
+"    B<Enhances>\n"
+"    B<Essential>\n"
+"    B<Filename>\n"
+"    B<Installed-Size>\n"
+"    B<MD5sum>\n"
+"    B<MSDOS-Filename>\n"
+"    B<Maintainer>\n"
+"    B<Origin>\n"
+"    B<Package>\n"
+"    B<Pre-Depends>\n"
+"    B<Priority>\n"
+"    B<Provides>\n"
+"    B<Recommends>\n"
+"    B<Replaces>\n"
+"    B<Revision>\n"
+"    B<Section>\n"
+"    B<Size>\n"
+"    B<Source>\n"
+"    B<Status>\n"
+"    B<Suggests>\n"
+"    B<Version>\n"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:157
+msgid ""
+"The default format string is \\(lqB<${Package}\\et${Version}\\en>\\(rq.  To "
+"get the name of the dpkg maintainer and the installed version, you could run:"
+msgstr ""
+
+# type: Plain text
+#: dpkg-query.1:161
+#, no-wrap
+msgid "  B<dpkg-query -W -f='${Package} ${Version}\\et${Maintainer}\\en' dpkg>\n"
 msgstr ""
 
 # type: SH
-#: dpkg-query.1:73
+#: dpkg-query.1:163
 #, no-wrap
 msgid "ENVIRONMENT"
 msgstr ""
 
 # type: TP
-#: dpkg-query.1:74
+#: dpkg-query.1:164
 #, no-wrap
 msgid "B<COLUMNS>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:78
+#: dpkg-query.1:168
 msgid ""
 "This setting influences the output of the B<--list> option by changing the "
 "width of its output."
 msgstr ""
 
 # type: SH
-#: dpkg-query.1:79
+#: dpkg-query.1:169
 #, no-wrap
 msgid "AUTHOR"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:81
+#: dpkg-query.1:171
 msgid "Copyright 2001 Wichert Akkerman"
 msgstr ""
 
 # type: UR
-#: dpkg-query.1:81
+#: dpkg-query.1:171
 #, no-wrap
 msgid "mailto:wakkerma@debian.org"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:83
+#: dpkg-query.1:173
 msgid "E<lt>wakkerma@debian.orgE<gt>"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:87
+#: dpkg-query.1:177
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions.  There is NO warranty."
 msgstr ""
 
 # type: SH
-#: dpkg-query.1:89
+#: dpkg-query.1:178
 #, no-wrap
 msgid "SEE ALSO"
 msgstr ""
 
 # type: Plain text
-#: dpkg-query.1:91
-msgid "B<dpkg>(8)"
+#: dpkg-query.1:180
+msgid "B<dpkg>(1)."
 msgstr ""
