--- a/man/C/po/dpkg-scansources.1.pot
+++ b/man/C/po/dpkg-scansources.1.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: dpkg-scansources.1:1
@@ -40,7 +40,8 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-scansources.1:4
-msgid "dpkg-scansources - search for '.dsc' files and build the 'Sources' index"
+msgid ""
+"dpkg-scansources - search for '.dsc' files and build the 'Sources' index"
 msgstr ""
 
 # type: IX
@@ -52,8 +53,8 @@ msgstr ""
 # type: Plain text
 #: dpkg-scansources.1:8
 msgid ""
-"\\&B<dpkg-scansources> [switch]... I<binary-dir> [I<override-file> "
-"[I<path-prefix>]] E<gt> Sources"
+"\\&B<dpkg-scansources> [switch]... I<binary-dir> [I<override-file> [I<path-"
+"prefix>]] E<gt> Sources"
 msgstr ""
 
 # type: IX
