--- a/man/C/po/dpkg-statoverride.8.pot
+++ b/man/C/po/dpkg-statoverride.8.pot
@@ -6,13 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-06-22  0:58+0200\n"
+"POT-Creation-Date: 2006-02-17 16:48+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING"
+"Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
 #: dpkg-statoverride.8:1
@@ -23,7 +23,7 @@ msgstr ""
 # type: TH
 #: dpkg-statoverride.8:1
 #, no-wrap
-msgid "November 2000"
+msgid "2006-01-26"
 msgstr ""
 
 # type: TH
@@ -134,8 +134,8 @@ msgstr ""
 # type: Plain text
 #: dpkg-statoverride.8:36
 msgid ""
-"Remove an override for B<E<lt>fileE<gt>>, the status of B<E<lt>file> is left "
-"unchanged by this command."
+"Remove an override for B<E<lt>fileE<gt>>, the status of B<E<lt>fileE<gt>> is "
+"left unchanged by this command."
 msgstr ""
 
 # type: TP
@@ -173,7 +173,8 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-statoverride.8:49
-msgid "Immediately try to change the file to the new owner and mode if it exists."
+msgid ""
+"Immediately try to change the file to the new owner and mode if it exists."
 msgstr ""
 
 # type: TP
@@ -246,7 +247,7 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-statoverride.8:70
-msgid "B<dpkg>(8)"
+msgid "B<dpkg>(1)"
 msgstr ""
 
 # type: SH
