* Typo fixes in man pages by A. Costa:   - dpkg-deb.1 Closes: #353424   - dpkg-statoverride.8 Closes: #353425   - install-info.8 Closes: #353426   - start-stop-daemon.8 Closes: #353427   - update-alternatives.8 Closes: #353428   - dpkg.1, dpkg.cfg.5 Closes: #353429 (and update/unfuzzy translations)

--- a/man/C/dpkg-statoverride.8
+++ b/man/C/dpkg-statoverride.8
@@ -1,4 +1,4 @@
-.TH DPKG-STATOVERRIDE 8 "2006-01-26" "Debian project" "dpkg utililties"
+.TH DPKG-STATOVERRIDE 8 "2006-01-26" "Debian project" "dpkg utilities"
 .SH NAME
 dpkg\-statoverride - override ownership and mode of files
 .SH SYNOPSIS
