--- a/man/C/po/install-info.8.pot
+++ b/man/C/po/install-info.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -308,7 +308,7 @@ msgstr ""
 #: install-info.8:181
 msgid ""
 "Specifies that the maximum width for the Info file is I<nnn>.  This is used "
-"when wordwrapping the descriptive text.  The default is 79."
+"when word-wrapping the descriptive text.  The default is 79."
 msgstr ""
 
 # type: TP
@@ -450,7 +450,7 @@ msgstr ""
 # type: Plain text
 #: install-info.8:255
 msgid ""
-"If the file being installed alreay has an entry in the directory the old "
+"If the file being installed already has an entry in the directory the old "
 "entry will be left alone instead of being replaced; the default is to "
 "overwrite any old entry found with the newly generated one."
 msgstr ""
