--- a/man/C/po/update-alternatives.8.pot
+++ b/man/C/po/update-alternatives.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -247,7 +247,7 @@ msgstr ""
 # type: Plain text
 #: update-alternatives.8:178
 msgid ""
-"If you want to configure non-interactivily you can use the I<--set> option "
+"If you want to configure non-interactively you can use the I<--set> option "
 "instead (see below)."
 msgstr ""
 
