--- a/man/C/start-stop-daemon.8
+++ b/man/C/start-stop-daemon.8
@@ -224,7 +224,7 @@ make no sense forking on their own, or where it's not feasible to add the
 code for it to do this itself.
 .TP
 \fB\-N\fP|\fB\-\-nicelevel\fP \fIint\fP 
-This alters the prority of the process before starting it.
+This alters the priority of the process before starting it.
 .TP
 .BR \-m | \-\-make\-pidfile
 Used when starting a program that does not create its own pid file. This
