--- a/man/C/update-alternatives.8
+++ b/man/C/update-alternatives.8
@@ -172,7 +172,7 @@ mode. You will need to use the
 .I \-\-auto
 option in order to return to the automatic state.
 .PP
-If you want to configure non-interactivily you can use the
+If you want to configure non-interactively you can use the
 .I \-\-set
 option instead (see below).
 .SH TERMINOLOGY
