--- a/man/es/dpkg-deb.1.es.po
+++ b/man/es/dpkg-deb.1.es.po
@@ -169,8 +169,8 @@ msgstr ""
 #: dpkg-deb.1:72
 #, fuzzy
 msgid ""
-"You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
-"deb> will pass that option on to gzip."
+"You can specify the compression level used by adding a B<-z#> option.  "
+"B<dpkg-deb> will pass that option on to gzip."
 msgstr ""
 "Usted puede especificar el nivel de compresión usado con la opción B<-z#.> "
 "B<dpkg-deb> pasará ésta a gzip."
