--- a/man/fr/dpkg-statoverride.8.fr.po
+++ b/man/fr/dpkg-statoverride.8.fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2006-02-05 10:25+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -34,7 +34,7 @@ msgstr "Projet Debian"
 # type: TH
 #: dpkg-statoverride.8:1
 #, no-wrap
-msgid "dpkg utililties"
+msgid "dpkg utilities"
 msgstr "Utilitaires de dpkg"
 
 # type: SH
