--- a/man/fr/update-alternatives.8.fr.po
+++ b/man/fr/update-alternatives.8.fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2006-02-05 10:40+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -312,7 +312,7 @@ msgstr ""
 # type: Plain text
 #: update-alternatives.8:178
 msgid ""
-"If you want to configure non-interactivily you can use the I<--set> option "
+"If you want to configure non-interactively you can use the I<--set> option "
 "instead (see below)."
 msgstr ""
 "Si vous voulez configurer de manière non interactive, vous pouvez utiliser "
