--- a/man/ja/update-alternatives.8.ja.po
+++ b/man/ja/update-alternatives.8.ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -323,7 +323,7 @@ msgstr ""
 #: update-alternatives.8:178
 #, fuzzy
 msgid ""
-"If you want to configure non-interactivily you can use the I<--set> option "
+"If you want to configure non-interactively you can use the I<--set> option "
 "instead (see below)."
 msgstr ""
 "非対話的に設定をしたい場合は I<--set> オプションを代わりに使用する(以下を参"
