--- a/man/sv/dpkg-deb.1.sv.po
+++ b/man/sv/dpkg-deb.1.sv.po
@@ -158,8 +158,8 @@ msgstr ""
 # type: Plain text
 #: dpkg-deb.1:72
 msgid ""
-"You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
-"deb> will pass that option on to gzip."
+"You can specify the compression level used by adding a B<-z#> option.  "
+"B<dpkg-deb> will pass that option on to gzip."
 msgstr ""
 "Du kan ange komprimeringsnivån genom att lägga till flaggan B<-z#>.  B<dpkg-"
 "deb> kommer sända vidare den flaggan till gzip."
