--- a/man/sv/start-stop-daemon.8.sv.po
+++ b/man/sv/start-stop-daemon.8.sv.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
@@ -467,7 +467,7 @@ msgstr "B<-N>|B<--nicelevel> I<heltal>"
 # type: Plain text
 #: start-stop-daemon.8:228
 #, fuzzy
-msgid "This alters the prority of the process before starting it."
+msgid "This alters the priority of the process before starting it."
 msgstr "Detta ändrar prioriteten på processen innan den startas."
 
 # type: TP
