--- a/man/C/install-info.8
+++ b/man/C/install-info.8
@@ -176,7 +176,7 @@ characters.  The default is 29.
 .BI \-\-maxwidth= nnn " [deprecated]"
 Specifies that the maximum width for the Info file is
 .IR nnn .
-This is used when wordwrapping the descriptive text.
+This is used when word-wrapping the descriptive text.
 The default is 79.
 .TP
 .B \-\-quiet
@@ -249,7 +249,7 @@ is omitted no check on the menu entry is done.
 Inhibits the replacement of existing entries and the removal of empty
 sections.
 
-If the file being installed alreay has an entry in the directory the
+If the file being installed already has an entry in the directory the
 old entry will be left alone instead of being replaced; the default is
 to overwrite any old entry found with the newly generated one.
 
