--- a/man/C/po/dpkg-statoverride.8.pot
+++ b/man/C/po/dpkg-statoverride.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -35,7 +35,7 @@ msgstr ""
 # type: TH
 #: dpkg-statoverride.8:1
 #, no-wrap
-msgid "dpkg utililties"
+msgid "dpkg utilities"
 msgstr ""
 
 # type: SH
