--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,19 @@
+2006-02-18  Frank Lichtenheld  <djpig@debian.org>
+
+	* C/po/*.pot: Update.
+	* */*.po: Unfuzzy strings fuzzied due to the
+	typo fixes.
+
+2006-02-18  A. Costa  <agcosta@gis.net>
+
+	* C/dpkg-deb.1: Typo fix.
+	* C/dpkg-statoverride.8: Typo fix.
+	* C/install-info.8: Typo fix.
+	* C/start-stop-daemon.8: Typo fix.
+	* C/update-alternatives.8: Typo fix.
+	* C/dpkg.1: Typo fix.
+	* C/dpkg.cfg.5: Typo fix.
+
 2006-02-17  Frank Lichtenheld  <djpig@debian.org>
 
 	* C/po/*.pot: Update.
