--- a/man/de/update-alternatives.8.de.po
+++ b/man/de/update-alternatives.8.de.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -323,7 +323,7 @@ msgstr ""
 # type: Plain text
 #: update-alternatives.8:178
 msgid ""
-"If you want to configure non-interactivily you can use the I<--set> option "
+"If you want to configure non-interactively you can use the I<--set> option "
 "instead (see below)."
 msgstr ""
 "Falls Sie nichtinteraktiv konfigurieren möchten, können Sie stattdessen "
