--- a/man/fr/dpkg-deb.1.fr.po
+++ b/man/fr/dpkg-deb.1.fr.po
@@ -156,8 +156,8 @@ msgstr ""
 # type: Plain text
 #: dpkg-deb.1:72
 msgid ""
-"You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
-"deb> will pass that option on to gzip."
+"You can specify the compression level used by adding a B<-z#> option.  "
+"B<dpkg-deb> will pass that option on to gzip."
 msgstr ""
 "On peut préciser le degré de compression en ajoutant une option B<-z#>.  "
 "B<dpkg-deb> passe cette option à gzip."
