--- a/man/fr/install-info.8.fr.po
+++ b/man/fr/install-info.8.fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2006-02-05 10:30+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -388,7 +388,7 @@ msgstr "B<--maxwidth=>I<nnn>B< [déconseillé]>"
 #: install-info.8:181
 msgid ""
 "Specifies that the maximum width for the Info file is I<nnn>.  This is used "
-"when wordwrapping the descriptive text.  The default is 79."
+"when word-wrapping the descriptive text.  The default is 79."
 msgstr ""
 "Précise que la largeur maximale d'une ligne du fichier Info est de I<nnn>. "
 "Cela sert pour «\\ couper\\ » automatiquement les lignes du texte "
@@ -564,7 +564,7 @@ msgstr ""
 # type: Plain text
 #: install-info.8:255
 msgid ""
-"If the file being installed alreay has an entry in the directory the old "
+"If the file being installed already has an entry in the directory the old "
 "entry will be left alone instead of being replaced; the default is to "
 "overwrite any old entry found with the newly generated one."
 msgstr ""
