--- a/man/fr/start-stop-daemon.8.fr.po
+++ b/man/fr/start-stop-daemon.8.fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2006-02-05 10:34+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -447,7 +447,7 @@ msgstr "B<-N>|B<--nicelevel> I<int>"
 
 # type: Plain text
 #: start-stop-daemon.8:228
-msgid "This alters the prority of the process before starting it."
+msgid "This alters the priority of the process before starting it."
 msgstr "Cela modifie la priorité du processus avant qu'il ne soit lancé."
 
 # type: TP
