--- a/man/hu/dpkg-deb.1.hu.po
+++ b/man/hu/dpkg-deb.1.hu.po
@@ -157,8 +157,8 @@ msgstr ""
 # type: Plain text
 #: dpkg-deb.1:72
 msgid ""
-"You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
-"deb> will pass that option on to gzip."
+"You can specify the compression level used by adding a B<-z#> option.  "
+"B<dpkg-deb> will pass that option on to gzip."
 msgstr ""
 "A B<-z#> lehetőséggel megadható a tömörítási szint. A B<dpkg-deb> átadja ezt "
 "a gzip-nek.."
