--- a/man/ja/dpkg-deb.1.ja.po
+++ b/man/ja/dpkg-deb.1.ja.po
@@ -168,8 +168,8 @@ msgstr ""
 #: dpkg-deb.1:72
 #, fuzzy
 msgid ""
-"You can specify the compressionlevel used by adding a B<-z#> option.  B<dpkg-"
-"deb> will pass that option on to gzip."
+"You can specify the compression level used by adding a B<-z#> option.  "
+"B<dpkg-deb> will pass that option on to gzip."
 msgstr ""
 "圧縮レベルを指定する場合は、 B<-z#> オプションを追加する。 B<dpkg-deb> は、こ"
 "のオプションを gzip に渡す。"
