--- a/man/ja/dpkg-statoverride.8.ja.po
+++ b/man/ja/dpkg-statoverride.8.ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -34,7 +34,7 @@ msgstr "Debian project"
 # type: TH
 #: dpkg-statoverride.8:1
 #, fuzzy, no-wrap
-msgid "dpkg utililties"
+msgid "dpkg utilities"
 msgstr "dpkg utililties"
 
 # type: SH
