--- a/man/ja/install-info.8.ja.po
+++ b/man/ja/install-info.8.ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -400,7 +400,7 @@ msgstr "B<--maxwidth=>I<nnn>B< [非推奨]>"
 #, fuzzy
 msgid ""
 "Specifies that the maximum width for the Info file is I<nnn>.  This is used "
-"when wordwrapping the descriptive text.  The default is 79."
+"when word-wrapping the descriptive text.  The default is 79."
 msgstr ""
 "Info ファイルの最大幅を I<nnn> にする。説明文をワードラップするときに使われ"
 "る。 デフォルトは 79 である。"
@@ -581,7 +581,7 @@ msgstr "現存するエントリの置換や空セクションの削除を行わない。"
 #: install-info.8:255
 #, fuzzy
 msgid ""
-"If the file being installed alreay has an entry in the directory the old "
+"If the file being installed already has an entry in the directory the old "
 "entry will be left alone instead of being replaced; the default is to "
 "overwrite any old entry found with the newly generated one."
 msgstr ""
