--- a/man/ja/start-stop-daemon.8.ja.po
+++ b/man/ja/start-stop-daemon.8.ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -449,7 +449,7 @@ msgstr "B<-N>|B<--nicelevel> I<int>"
 # type: Plain text
 #: start-stop-daemon.8:228
 #, fuzzy
-msgid "This alters the prority of the process before starting it."
+msgid "This alters the priority of the process before starting it."
 msgstr "プロセスを開始する前にプロセスのプライオリティを変更する。"
 
 # type: TP
