--- a/man/pt_BR/update-alternatives.8.pt_BR.po
+++ b/man/pt_BR/update-alternatives.8.pt_BR.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
@@ -320,7 +320,7 @@ msgstr ""
 #: update-alternatives.8:178
 #, fuzzy
 msgid ""
-"If you want to configure non-interactivily you can use the I<--set> option "
+"If you want to configure non-interactively you can use the I<--set> option "
 "instead (see below)."
 msgstr ""
 "If you want to configure non-interactivily you can use the I<--set> option "
