--- a/man/ru/start-stop-daemon.8.ru.po
+++ b/man/ru/start-stop-daemon.8.ru.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-17 16:48+0100\n"
+"POT-Creation-Date: 2006-02-18 12:51+0100\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -458,7 +458,7 @@ msgstr "B<-N>|B<--nicelevel>"
 # type: Plain text
 #: start-stop-daemon.8:228
 #, fuzzy
-msgid "This alters the prority of the process before starting it."
+msgid "This alters the priority of the process before starting it."
 msgstr "Этот флаг перед запуском изменяет приоритет процесса."
 
 # type: TP
