Lets release 1.13.16 since dpkg-scanpackages is essentially broken when used with overrides

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
+2006-02-18  Frank Lichtenheld  <djpig@debian.org>
+
+	* configure.ac: Release 1.13.16.
+
 2006-02-17  Frank Lichtenheld  <djpig@debian.org>
 
+	* man/ChangeLog: Start an own changelog for the
+	manpages.
+	
 	* scripts/dpkg-scanpackages.pl: Fix override handling
 	which was broken by the latest changes.
 
