--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-dpkg (1.13.16~) UNRELEASED; urgency=low
+dpkg (1.13.16) unstable; urgency=low
 
+  * The "not really a brown paper bag needed but it's close" release
+  
   [ Guillem Jover ]
   * Move auxiliary autotools scripts to config/.
   * Require gettext 0.14.5.
@@ -22,7 +24,7 @@ dpkg (1.13.16~) UNRELEASED; urgency=low
     - update-alternatives.8 Closes: #353428
     - dpkg.1, dpkg.cfg.5 Closes: #353429
 
- -- Guillem Jover <guillem@debian.org>  Fri, 17 Feb 2006 03:52:59 +0200
+ -- Frank Lichtenheld <djpig@debian.org>  Sat, 18 Feb 2006 17:59:00 +0100
 
 dpkg (1.13.15) unstable; urgency=low
 
