--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2006-02-18  Frank Lichtenheld  <djpig@debian.org>
 
+	* configure.ac: Bump version to 1.13.17~.
+
 	* configure.ac: Release 1.13.16.
 
 2006-02-17  Frank Lichtenheld  <djpig@debian.org>
