--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.13.17~) UNRELEASED; urgency=low
+
+  * 
+
+ -- Frank Lichtenheld <frank@lichtenheld.de>  Sat, 18 Feb 2006 19:01:24 +0100
+
 dpkg (1.13.16) unstable; urgency=low
 
   * The "not really a brown paper bag needed but it's close" release
