Fix handling of debian/files when architecture is set via -D command line option. The value override was applied too late. Closes: #251911 Historical sidenote: This was already fixed once back in Ian Jackson's 1.5 branch but was apparently never correctly merged back.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-02-18  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-gencontrol.pl: Fix handling of
+	debian/files when architecture is set via -D
+	command line option. The value override was
+	applied too late.
+
 	* configure.ac: Bump version to 1.13.17~.
 
 	* configure.ac: Release 1.13.16.
