--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.13.17~) UNRELEASED; urgency=low
 
-  * 
+  [ Frank Lichtenheld ]
+  * Fix handling of -DArchitecure=foo in dpkg-gencontrol. Closes: #251911
 
  -- Frank Lichtenheld <frank@lichtenheld.de>  Sat, 18 Feb 2006 19:01:24 +0100
 
