Handle architectures in all dependency fields in debian/control, even those of binary packages. Closes: #252657, #324741, #347819

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-02-18  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-gencontrol.pl: Call parsedep
+	with use_arch and reduce_arch parameters to
+	allow using architectures in dependency
+	fields of binary packages in debian/control.
+
 	* scripts/dpkg-gencontrol.pl: Fix handling of
 	debian/files when architecture is set via -D
 	command line option. The value override was
