--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
 
   [ Frank Lichtenheld ]
   * Fix handling of -DArchitecure=foo in dpkg-gencontrol. Closes: #251911
+  * Handle architectures in all dependency fields in debian/control,
+    even those of binary packages. Closes: #252657, #324741, #347819
 
  -- Frank Lichtenheld <frank@lichtenheld.de>  Sat, 18 Feb 2006 19:01:24 +0100
 
