--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-19  Carlos Z.F. Liu <carlosliu@users.sourceforge.net>
+
+	* zh_CN.po: Updated to 729t. (finished)
+
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
 	* POTFILES.in: Remove dselect source files.
