hu dselect fixes

--- a/dselect/po/hu.po
+++ b/dselect/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-02-17 05:07+0200\n"
-"PO-Revision-Date: 2006-02-19 00:49+0100\n"
+"PO-Revision-Date: 2006-02-19 09:31+0100\n"
 "Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: hu\n"
 "MIME-Version: 1.0\n"
@@ -542,13 +542,13 @@ msgstr "A dselect --help adja a súgót"
 
 #: dselect/main.cc:138
 msgid "a"
-msgstr "h"
+msgstr "e"
 
 # MAX  ENNÉL  3-AL !!!!!  TÖBB KARAKTER !
 # - sas
 #: dselect/main.cc:138
 msgid "[A]ccess"
-msgstr "[H]lérés"
+msgstr "[E]lérés"
 
 #: dselect/main.cc:138
 msgid "Choose the access method to use."
@@ -604,15 +604,15 @@ msgstr "Beállítatlan csomagok beállítása."
 
 #: dselect/main.cc:143
 msgid "r"
-msgstr "e"
+msgstr "l"
 
 #: dselect/main.cc:143
 msgid "[R]emove"
-msgstr "[T]örlés"
+msgstr "[L]eszedés"
 
 #: dselect/main.cc:143
 msgid "Remove unwanted software."
-msgstr "Törlés"
+msgstr "Nem kívánt szoftverek eltávolítása."
 
 #: dselect/main.cc:144
 msgid "q"
@@ -677,56 +677,71 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Használat: %s [<opció> ...] [<művelet> ...]\n"
+"\n"
+"Lehetőségek:\n"
+"  --admindir <könyvtár>      Use <directory> instead of %s.\n"
+"  --expert                   Szakértő mód.\n"
+"  --debug <file> | -D<file>  Hibaellenőrzés, kiemenet küldése ide: <fájl>.\n"
+"  --colour | --color képernyúrész:[előtér],[háttér][:attr[+attr+..]]\n"
+"                             Képernyőszínek beállítása.\n"
+"  --help                     E súgó megjelenítése.\n"
+"  --version                  Verzió kiírása.\n"
+"  --license                  Licenc kiírása.\n"
+"\n"
+"Műveletek:\n"
+"  elérés frissítés választás telepítés beállítás leszedés kilépés\n"
+"\n"
 
 #: dselect/main.cc:187
 #, c-format
 msgid "Screenparts:\n"
-msgstr ""
+msgstr "Képernyőrészek:\n"
 
 #: dselect/main.cc:192
 #, c-format
 msgid "Colours:\n"
-msgstr ""
+msgstr "Színek:\n"
 
 #: dselect/main.cc:197
 #, c-format
 msgid "Attributes:\n"
-msgstr ""
+msgstr "Attribútumok:\n"
 
 #: dselect/main.cc:217
 #, c-format
 msgid "couldn't open debug file `%.255s'\n"
-msgstr ""
+msgstr "sikertelen `%.255s' hibajavító fájl megnyitás\n"
 
 #: dselect/main.cc:232
 #, c-format
 msgid "Invalid %s `%s'\n"
-msgstr ""
+msgstr "Érvénytelen %s `%s'\n"
 
 #: dselect/main.cc:249
 msgid "screen part"
-msgstr ""
+msgstr "képernyőrész"
 
 #: dselect/main.cc:255
 msgid "Null colour specification\n"
-msgstr ""
+msgstr "nincs szín megadva\n"
 
 #: dselect/main.cc:263
 #: dselect/main.cc:268
 msgid "colour"
-msgstr ""
+msgstr "szín"
 
 #: dselect/main.cc:276
 msgid "colour attribute"
-msgstr ""
+msgstr "színattribútum"
 
 #: dselect/main.cc:310
 msgid "Terminal does not appear to support cursor addressing.\n"
-msgstr ""
+msgstr "Úgy fest, a terminál nem támogatja a kurzorcímzést.\n"
 
 #: dselect/main.cc:312
 msgid "Terminal does not appear to support highlighting.\n"
-msgstr ""
+msgstr "Úgy fest, a terminál nem támogatja a kiemelést.\n"
 
 #: dselect/main.cc:314
 #, c-format
@@ -734,10 +749,12 @@ msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
 msgstr ""
+"Javítsd a TERM változót, használj jobb terminált,\n"
+"vagy dolgozz e problémát elkerülő csomagkezelővel: %s.\n"
 
 #: dselect/main.cc:317
 msgid "terminal lacks necessary features, giving up"
-msgstr ""
+msgstr "a terminál nem bír a szükséges képességekkel, feladom"
 
 #: dselect/main.cc:395
 msgid ""
@@ -765,12 +782,12 @@ msgstr ""
 
 #: dselect/main.cc:429
 msgid "failed to getch in main menu"
-msgstr ""
+msgstr "a főmenü elérése meghiúsult"
 
 #: dselect/main.cc:502
 #, c-format
 msgid "unknown action string `%.50s'"
-msgstr ""
+msgstr "ismeretlen művelet sztring %.50s'"
 
 #: dselect/methlist.cc:78
 msgid "dselect - list of access methods"
@@ -783,7 +800,7 @@ msgstr "`%s' elérési mód."
 
 #: dselect/methlist.cc:121
 msgid "Abbrev."
-msgstr ""
+msgstr "Röv."
 
 #: dselect/methlist.cc:122
 #: dselect/pkgtop.cc:297
@@ -792,7 +809,7 @@ msgstr "Leírás"
 
 #: dselect/methlist.cc:166
 msgid "doupdate failed"
-msgstr ""
+msgstr "frissítés sikertelen"
 
 #: dselect/methlist.cc:168
 msgid "failed to unblock SIGWINCH"
