--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,10 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Handle architectures in all dependency fields in debian/control,
     even those of binary packages. Closes: #252657, #324741, #347819
 
-  [ Updated Translations ]
+  [ Updated dselect Translations ]
+  * hu.po (SZERVÁC Attila).
+  
+  [ Updated dpkg Translations ]
   * zh_CN.po (Carlos Z.F. Liu).
 
  -- Frank Lichtenheld <frank@lichtenheld.de>  Sat, 18 Feb 2006 19:01:24 +0100
