--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-18  SZERVÁC Attila  <sas@321.hu>
+
+	* hu.po: 192t94u
+
 2006-02-17  Guillem Jover  <guillem@debian.org>
 
 	* LINGUAS: New file.
