--- a/man/fr/dpkg-source.1.fr.po
+++ b/man/fr/dpkg-source.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg.1\n"
 "POT-Creation-Date: 2006-02-17 16:48+0100\n"
-"PO-Revision-Date: 2006-02-11 10:53+0100\n"
+"PO-Revision-Date: 2006-02-19 09:48+0100\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -953,6 +953,12 @@ msgid ""
 "default behaviour. If you want to get the old behaviour you can use the B<-"
 "U> option to delete the fields from the control file."
 msgstr ""
+"Ces options, conservées pour compatibilité avec les anciennes versions de "
+"dpkg-dev, sont maintenant déconseillées. Elles servaient à dire à dpkg-"
+"gencontrol d'inclure les champs « Section » et « Priority » dans le fichier "
+"« control ». C'est maintenant le comportement par défaut. Si vous voulez "
+"l'ancien comportement, vous pouvez utiliser l'option B<-U> pour supprimer "
+"ces champs du fichier « control »."
 
 # type: TP
 #: dpkg-source.1:451
